--- a/cake.html
+++ b/cake.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>cake</title>
-<script defer src="polyfill.0388eabd6c24f8395262.js"></script><script defer src="app.0388eabd6c24f8395262.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.7e7587fed84314805822.js"></script><script defer src="app.7e7587fed84314805822.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -79,9 +79,36 @@
           <div class="product__img">
             <img src="287b85aa6de831d12668.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>Cake «Napoleon»</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, molestias perspiciatis quod rerum laborum dicta doloribus adipisci omnis natus beatae, a voluptatibus atque consequatur ex exercitationem voluptas dolore quasi vitae.</p>
+          <div class="product__info">
+            <h1 class="product__name">Cake «Napoleon»</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation">It’s good that there are things in life that unite generations. Cake “Napoleon”, with its shortbread cakes in combination with custard and a surface that is framed with crumbs of semi-finished shortbread – who does not know its unforgettable taste? If it is on the table, it means a holiday at home, joy and fun!</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:4.6">4.6g</div>
+                    <span class="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:18.5">18.5g</div>
+                    <span class="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:36.4">36.4g</div>
+                    <span class="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life">Shelf life: 5</span>
+                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value">Energy value: 330.9g</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation">more</div>
+            </div>
           </div>
         </div>
         <span></span>
@@ -89,9 +116,36 @@
           <div class="product__img">
             <img src="6bfcdafa30bdcec53c26.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>Cake «Napoleon» with cherry</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis ratione sapiente deserunt illo iure, ex rerum aliquam beatae fugiat, ad aspernatur dolorum eligendi fugit, dolor tenetur architecto doloribus! Quis, atque.</p>
+          <div class="product__info">
+            <h1 class="product__name">Cake «Napoleon» with cherry</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation">We offer a cake with a pleasant cherry flavor. It is smeared with cold-cooked custard with natural cherry filling. Our NAPOLEON cake will make your table festive and delight everyone with its taste!</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:3.8">3.8g</div>
+                    <span class="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:15.5">15.5g</div>
+                    <span class="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:34.7">34.7g</div>
+                    <span class="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life">Shelf life: 5</span>
+                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value">Energy value: 294.1g</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation">more</div>
+            </div>
           </div>
         </div>
         <span></span>
@@ -99,9 +153,36 @@
           <div class="product__img">
             <img src="6f067e8e853fc87db33c.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>Cake «SMETANNIK»</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis ratione sapiente deserunt illo iure, ex rerum aliquam beatae fugiat, ad aspernatur dolorum eligendi fugit, dolor tenetur architecto doloribus! Quis, atque.</p>
+          <div class="product__info">
+            <h1 class="product__name">Cake «SMETANNIK»</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation">This cake is very tender, every bite literally melts in your mouth, and you can hardly stop after trying it once. “Smetannik” is perfect as the main dessert for any holidays, and this cake will help while away the evenings with a cup of tea or coffee, surrounded by family or friends.</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:5.5">5.5g</div>
+                    <span class="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:17.7">17.7g</div>
+                    <span class="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:42.1">42.1g</div>
+                    <span class="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life">Shelf life: 5</span>
+                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value">Energy value: 352.4g</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation">more</div>
+            </div>
           </div>
         </div>
         <span></span>
@@ -109,9 +190,36 @@
           <div class="product__img">
             <img src="dac05ac3c2287a739b10.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>Honey cake «DOMASHNII»</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis ratione sapiente deserunt illo iure, ex rerum aliquam beatae fugiat, ad aspernatur dolorum eligendi fugit, dolor tenetur architecto doloribus! Quis, atque.</p>
+          <div class="product__info">
+            <h1 class="product__name">Honey cake «DOMASHNII»</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation">For those with a sweet tooth who adore honey, we are pleased to offer you to taste the honey cake made according to the classic recipe.</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:4.1">4.1g</div>
+                    <span class="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:22.6">22.6g</div>
+                    <span class="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:53">53g</div>
+                    <span class="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life">Shelf life: 10</span>
+                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value">Energy value: 431.2g</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation">more</div>
+            </div>
           </div>
         </div>
         <span></span>
@@ -119,9 +227,36 @@
           <div class="product__img">
             <img src="93952d64a36459f56b13.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>Honey cake «DOMASHNII» with cherry</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis ratione sapiente deserunt illo iure, ex rerum aliquam beatae fugiat, ad aspernatur dolorum eligendi fugit, dolor tenetur architecto doloribus! Quis, atque.</p>
+          <div class="product__info">
+            <h1 class="product__name">Honey cake «DOMASHNII» with cherry</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation">Delicate honey cakes, soaked in creamy sour cream, with juicy cherries in the form of a filler, create an excellent taste harmony!</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:3.5">3.5g</div>
+                    <span class="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:18.1">18.1g</div>
+                    <span class="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:42.6">42.6g</div>
+                    <span class="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life">Shelf life: 10</span>
+                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value">Energy value: 346.7g</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation">more</div>
+            </div>
           </div>
         </div>
         <span></span>
@@ -129,9 +264,36 @@
           <div class="product__img">
             <img src="30ca87620f10768fce37.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>Honey cake DOMASHNII «IRISKA»</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis ratione sapiente deserunt illo iure, ex rerum aliquam beatae fugiat, ad aspernatur dolorum eligendi fugit, dolor tenetur architecto doloribus! Quis, atque.</p>
+          <div class="product__info">
+            <h1 class="product__name">Honey cake DOMASHNII «IRISKA»</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation">Incredibly fragrant honey cake layers, in combination with boiled condensed milk cream, will make your evening truly cozy!</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:5.5">5.5g</div>
+                    <span class="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:25.5">25.5g</div>
+                    <span class="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:53.7">53.7g</div>
+                    <span class="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life">Shelf life: 10</span>
+                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value">Energy value: 464.9g</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation">more</div>
+            </div>
           </div>
         </div>
         <span></span>
