--- a/bagel.html
+++ b/bagel.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>bagel</title>
-<script defer src="polyfill.0388eabd6c24f8395262.js"></script><script defer src="app.0388eabd6c24f8395262.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.7e7587fed84314805822.js"></script><script defer src="app.7e7587fed84314805822.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -73,15 +73,42 @@
     </div>
   </div>
   <div class="pa__products">
-    <div class="container2">
+    <div class="container1">
       <div class="products">
         <div class="product">
           <div class="product__img">
             <img src="efb0dae637b3ea344be1.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>Bagel«Malyutka»</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, molestias perspiciatis quod rerum laborum dicta doloribus adipisci omnis natus beatae, a voluptatibus atque consequatur ex exercitationem voluptas dolore quasi vitae.</p>
+          <div class="product__info">
+            <h1 class="product__name lang__product__page" key="bagel__name1">Bagel«Malyutka»</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation lang__product__page" key="bagel__article1">Traditional tea drinking is hard to imagine without crispy, fragrant bagels, the small size of which does not interfere with feeling the full range of flavoring qualities of fragrant bread!</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:8.8">8.8g</div>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:7.4">7.4g</div>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:78.7">78.7g</div>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life lang__product__page" key="bagel__shelf1">Shelf life: 180</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="bagel__energy__value1">Energy value: 417g</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
+            </div>
           </div>
         </div>
         <span></span>
@@ -89,9 +116,36 @@
           <div class="product__img">
             <img src="4758a76a1851ad51e50d.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>Corn rich bagel«Crunching»”</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis ratione sapiente deserunt illo iure, ex rerum aliquam beatae fugiat, ad aspernatur dolorum eligendi fugit, dolor tenetur architecto doloribus! Quis, atque.</p>
+          <div class="product__info">
+            <h1 class="product__name lang__product__page" key="bagel__name2">Corn rich bagel«Crunching»</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation lang__product__page" key="bagel__article2">Low-calorie corn bagel can not only quicker satisfy hunger, but also added pleasant crunchy emotions!</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:8.4">8.4g</div>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:7.4">7.4g</div>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:79.3">79.3g</div>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life lang__product__page" key="bagel__shelf1">Shelf life: 180</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="bagel__energy__value2">Energy value: 417.6g</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
+            </div>
           </div>
         </div>
         <span></span>
