--- a/butter.html
+++ b/butter.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>butter</title>
-<script defer src="polyfill.0388eabd6c24f8395262.js"></script><script defer src="app.0388eabd6c24f8395262.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.7e7587fed84314805822.js"></script><script defer src="app.7e7587fed84314805822.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -79,9 +79,36 @@
           <div class="product__img">
             <img src="18386bde1f42e10037e3.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>Cookies «CHEESE LEAVES»</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, molestias perspiciatis quod rerum laborum dicta doloribus adipisci omnis natus beatae, a voluptatibus atque consequatur ex exercitationem voluptas dolore quasi vitae.</p>
+          <div class="product__info">
+            <h1 class="product__name">Cookies «CHEESE LEAVES»</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation">The leaf-shaped cookies have a sweet taste, crumbly structure and a cheese aroma that will not leave anyone indifferent!</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:6.6">6.6g</div>
+                    <span class="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:19.9">19.9g</div>
+                    <span class="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:64.1">64.1g</div>
+                    <span class="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life">Shelf life: 60</span>
+                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value">Energy value: 470g</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation">more</div>
+            </div>
           </div>
         </div>
         <span></span>
@@ -89,9 +116,36 @@
           <div class="product__img">
             <img src="9509292e989101b3acb0.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>Cookies «DNEPR KAZKI»</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis ratione sapiente deserunt illo iure, ex rerum aliquam beatae fugiat, ad aspernatur dolorum eligendi fugit, dolor tenetur architecto doloribus! Quis, atque.</p>
+          <div class="product__info">
+            <h1 class="product__name">Cookies «DNEPR KAZKI»</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation">Delicate crumbly cookies that just melt in your mouth. Fabulously delicious!</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:7.4">7.4g</div>
+                    <span class="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:19.7">19.7g</div>
+                    <span class="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:64">64g</div>
+                    <span class="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life">Shelf life: 60</span>
+                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value">Energy value: 463g</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation">more</div>
+            </div>
           </div>
         </div>
         <span></span>
