--- a/cupcake.html
+++ b/cupcake.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>cupcake</title>
-<script defer src="polyfill.0388eabd6c24f8395262.js"></script><script defer src="app.0388eabd6c24f8395262.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.7e7587fed84314805822.js"></script><script defer src="app.7e7587fed84314805822.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -79,9 +79,36 @@
           <div class="product__img">
             <img src="6288f0f34655807b9a1a.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>Cupcake «DOMASHNII»</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, molestias perspiciatis quod rerum laborum dicta doloribus adipisci omnis natus beatae, a voluptatibus atque consequatur ex exercitationem voluptas dolore quasi vitae.</p>
+          <div class="product__info">
+            <h1 class="product__name">Cupcake «DOMASHNII»</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation">Today this sweet pastry is served with tea and consumed for breakfast, taken on the road and prepared for a special occasion. In addition to a delicate and pleasant aroma, cupcakes also have some useful properties, they are recommended for children who need enhanced nutrition.</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:6.05">6.05g</div>
+                    <span class="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:16.8">16.8g</div>
+                    <span class="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:57.9">57.9g</div>
+                    <span class="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life">Shelf life: 60</span>
+                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value">Energy value: 406.9g</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation">more</div>
+            </div>
           </div>
         </div>
         <span></span>
@@ -89,9 +116,36 @@
           <div class="product__img">
             <img src="e48af239b08d83f53ec0.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>Cupcake «RANKOVYI»</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis ratione sapiente deserunt illo iure, ex rerum aliquam beatae fugiat, ad aspernatur dolorum eligendi fugit, dolor tenetur architecto doloribus! Quis, atque.</p>
+          <div class="product__info">
+            <h1 class="product__name">Cupcake «RANKOVYI»</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation">Incredibly crumbled, delicate cupcake with raisins, decorated with powdered sugar … it is impossible to refuse such a delicacy …</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:6.1">6.1g</div>
+                    <span class="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:16.8">16.8g</div>
+                    <span class="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:57.9">57.9g</div>
+                    <span class="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life">Shelf life: 180</span>
+                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value">Energy value: 406.9g</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation">more</div>
+            </div>
           </div>
         </div>
         <span></span>
