--- a/oatmeal.html
+++ b/oatmeal.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>oaemeal</title>
-<script defer src="polyfill.0388eabd6c24f8395262.js"></script><script defer src="app.0388eabd6c24f8395262.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.7e7587fed84314805822.js"></script><script defer src="app.7e7587fed84314805822.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -79,9 +79,36 @@
           <div class="product__img">
             <img src="5677acd15c397e2d1f93.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>OATMEAL COOKIES «CLASSIC»</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, molestias perspiciatis quod rerum laborum dicta doloribus adipisci omnis natus beatae, a voluptatibus atque consequatur ex exercitationem voluptas dolore quasi vitae.</p>
+          <div class="product__info">
+            <h1 class="product__name">OATMEAL COOKIES «CLASSIC»</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation">Traditional cookies, which are made according to the classic recipe from natural ingredients, providing not only high biological value of the product, but also guaranteeing a unique taste to which we are used to since childhood!</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:6">6g</div>
+                    <span class="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:15">15g</div>
+                    <span class="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:71.5">71.5g</div>
+                    <span class="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life">Shelf life: 180</span>
+                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value">Energy value: 444.4g</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation">more</div>
+            </div>
           </div>
         </div>
         <span></span>
@@ -89,9 +116,36 @@
           <div class="product__img">
             <img src="31785f1a2896fb5aca91.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>OATMEAL COOKIES «ELITE»</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis ratione sapiente deserunt illo iure, ex rerum aliquam beatae fugiat, ad aspernatur dolorum eligendi fugit, dolor tenetur architecto doloribus! Quis, atque.</p>
+          <div class="product__info">
+            <h1 class="product__name">OATMEAL COOKIES «ELITE»</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation">Favorite oatmeal cookies become even tastier with the addition of chocolate pieces, giving the familiar taste to unique sweet notes!</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:5.9">5.9g</div>
+                    <span class="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:16.5">16.5g</div>
+                    <span class="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:68.9">68.9g</div>
+                    <span class="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life">Shelf life: 180</span>
+                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value">Energy value: 447.5g</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation">more</div>
+            </div>
           </div>
         </div>
         <span></span>
@@ -99,9 +153,36 @@
           <div class="product__img">
             <img src="c6dfead2f6b69a44e6fa.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>OATMEAL COOKIES «with cereals»</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis ratione sapiente deserunt illo iure, ex rerum aliquam beatae fugiat, ad aspernatur dolorum eligendi fugit, dolor tenetur architecto doloribus! Quis, atque.</p>
+          <div class="product__info">
+            <h1 class="product__name">OATMEAL COOKIES «with cereals»</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation">Roasted peanuts and flax seeds make traditional oatmeal cookies more tastier, healthier and enjoyable!</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:7.4">7.4g</div>
+                    <span class="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:16.5">16.5g</div>
+                    <span class="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:67.4">67.4g</div>
+                    <span class="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life">Shelf life: 180</span>
+                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value">Energy value: 445.3g</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation">more</div>
+            </div>
           </div>
         </div>
         <span></span>
@@ -109,9 +190,36 @@
           <div class="product__img">
             <img src="42366c957c3e72b681fa.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>OATMEAL COOKIES «with cereals»</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis ratione sapiente deserunt illo iure, ex rerum aliquam beatae fugiat, ad aspernatur dolorum eligendi fugit, dolor tenetur architecto doloribus! Quis, atque.</p>
+          <div class="product__info">
+            <h1 class="product__name">OATMEAL COOKIES «with cereals»</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation">Roasted peanuts and flax seeds make traditional oatmeal cookies more tastier, healthier and enjoyable!</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:7.4">7.4g</div>
+                    <span class="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:16.5">16.5g</div>
+                    <span class="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:67.4">67.4g</div>
+                    <span class="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life">Shelf life: 180</span>
+                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value">Energy value: 445.3g</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation">more</div>
+            </div>
           </div>
         </div>
         <span></span>
