--- a/sweet.html
+++ b/sweet.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>sweet</title>
-<script defer src="polyfill.0388eabd6c24f8395262.js"></script><script defer src="app.0388eabd6c24f8395262.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.7e7587fed84314805822.js"></script><script defer src="app.7e7587fed84314805822.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -79,9 +79,36 @@
           <div class="product__img">
             <img src="99d247647b493d39ab6f.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>KORZHYK «DYTIACHYI» Pink,White</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, molestias perspiciatis quod rerum laborum dicta doloribus adipisci omnis natus beatae, a voluptatibus atque consequatur ex exercitationem voluptas dolore quasi vitae.</p>
+          <div class="product__info">
+            <h1 class="product__name">KORZHYK «DYTIACHYI» Pink,White</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation">Remember how delicious tortillas were in our childhood? If you want to remember this taste and find yourself in childhood for a moment, then you should definitely try them!</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:5.2">5.2g</div>
+                    <span class="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:29.8">29.8g</div>
+                    <span class="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:61.7">61.7g</div>
+                    <span class="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life">Shelf life: 60</span>
+                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value">Energy value: 529.8</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation">more</div>
+            </div>
           </div>
         </div>
         <span></span>
@@ -89,9 +116,36 @@
           <div class="product__img">
             <img src="99d247647b493d39ab6f.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>KORZHYK «DYTIACHYI» White</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis ratione sapiente deserunt illo iure, ex rerum aliquam beatae fugiat, ad aspernatur dolorum eligendi fugit, dolor tenetur architecto doloribus! Quis, atque.</p>
+          <div class="product__info">
+            <h1 class="product__name">KORZHYK «DYTIACHYI» White</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation">Remember how delicious tortillas were in our childhood? If you want to remember this taste and find yourself in childhood for a moment, then you should definitely try them!</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:5,2">5,2g</div>
+                    <span class="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:29,8">29,8g</div>
+                    <span class="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:61,7">61,7g</div>
+                    <span class="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life">Shelf life: 60</span>
+                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value">Energy value: 529,8g</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation">more</div>
+            </div>
           </div>
         </div>
         <span></span>
@@ -99,9 +153,36 @@
           <div class="product__img">
             <img src="2e4cd0ce972cbb2198e1.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>KORZHYK «SHKILNYI»</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis ratione sapiente deserunt illo iure, ex rerum aliquam beatae fugiat, ad aspernatur dolorum eligendi fugit, dolor tenetur architecto doloribus! Quis, atque.</p>
+          <div class="product__info">
+            <h1 class="product__name">KORZHYK «SHKILNYI»</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation">Those who grew up in the Soviet Union remember these delicious cakes in school canteens. For those who were born later, we strongly recommend getting to know this wonderful pastry.</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:5,9">5,9g</div>
+                    <span class="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:28,5">28,5g</div>
+                    <span class="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:63,9">63,9g</div>
+                    <span class="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life">Shelf life: 60</span>
+                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value">Energy value: 531,8п</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation">more</div>
+            </div>
           </div>
         </div>
         <span></span>
@@ -109,9 +190,36 @@
           <div class="product__img">
             <img src="442791ccfe21c379c57c.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>KORZHYK «STUDENSKYI»</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis ratione sapiente deserunt illo iure, ex rerum aliquam beatae fugiat, ad aspernatur dolorum eligendi fugit, dolor tenetur architecto doloribus! Quis, atque.</p>
+          <div class="product__info">
+            <h1 class="product__name">KORZHYK «STUDENSKYI»</h1>
+            <div class="product__description">
+              <p class="product__article class__for__animation">Another favorite GOST. Another delicious treat for a hearty tea party.</p>
+              <div class="more__information">
+                <div class="more__information__first__container class__for__animation">
+                  <span class="caloric__content">caloric content of 100g of product</span>
+                <div class="product__diagram">
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:6.1">6.1g</div>
+                    <span class="proteins">Proteins</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:29.1">29.1g</div>
+                    <span class="fats">Fats</span>
+                  </div>
+                  <div class="dig">
+                    <div class="circle-diagram" style="--percent:61.7">61.7g</div>
+                    <span class="carbohydrates">Carbohydrates</span>
+                  </div>
+                </div>
+                </div>
+                <div class="more__information__second__container class__for__animation">
+                  <span class="shelf__life">Shelf life: 60</span>
+                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value">Energy value: 531.6g</span>
+                </div>
+              </div>
+              <div class="btn showMore class__for__animation">more</div>
+            </div>
           </div>
         </div>
         <span></span>
